--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat-foundry-starter",
+  "name": "hardhat-foundry-boiler",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
@@ -33,7 +33,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
-    "@rari-capital/solmate": "github:Rari-Capital/solmate#c5ae005b1cefb01b19a21c447d3e2e29aa5425fc"
+    "@openzeppelin/contracts-upgradeable": "latest"
   }
 }
